<resources>
    <string name="app_name">DangBody</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navi_home">홈</string>
    <string name="navi_activity">활동</string>
    <string name="navi_record">일정</string>
    <string name="navi_community">소통</string>

    <string name="tv_family">가족관리</string>
    <string name="tv_friend">친구관리</string>

    <!--activity_login.xml-->
    <string name="userId">ID 입력</string>
    <string name="userPw">PW 입력</string>
    <string name="btnLogin">로그인</string>
    <string name="btnJoin">가입하기</string>


    <!--activity_join.xml-->
    <string name="userNick">닉네임 입력</string>
    <string name="userName">이름 입력</string>
    <string name="userBirthday">생일 선택</string>
    <string name="userPwCheck">PW 확인</string>
    <string name="userPhone">전화번호 입력</string>

    <!--    frament_record.xml-->
    <string name="btnWeekly">날짜별 일정 추가</string>
    <string name="btnPrevMonth">◀</string>
    <string name="btnNextMonth">▶</string>

    <!--activity_camera-->
    <string name="btn_capture">촬영</string>
    <string name="btn_gallery">갤러리</string>
    <string name="btn_send">전송</string>

    <string-array name="randomTxt">
        <item>안녕하세요, 댕바디입니다.</item>
        <item>댕댕이 비만 여부 확인을 위해 댕바디를 진행해주세요.</item>
        <item>댕댕이 비만 관리를 위해 활동량을 늘려주세요.</item>
        <item>댕댕이 비만 관리를 위해 식단을 조절해주세요.</item>
        <item>사랑스러운 나의 반려견! 댕댕이! 살이 오른 모습이 귀여워 그냥 방치하셨다면 반려견 비만은 비만 자체보다 당뇨병, 관절 질환, 호흡기 질환, 심혈관계 질환, 간 기능 장애 등 질병의 원인이 된다는 사실, 알고 계셨나요? </item>
        <item>반려견의 비만은 수명 단축 뿐만 아니라 다양한 질병의 원인이 됩니다. 애정 표현을 위한 수단으로 무작정 간식을 주는 것이 결과적으로는 반려견의 건강을 해치는 것임을 기억합시다</item>
        <item>강아지에게 산책은 최고의 활동이에요. 산책을 하는 동안 흙, 꽃과 같은 주변 냄새를 맡으며 스트레스를 해소하고 운동 신경도 기를 수 있고 문제행동의 80% 이상은 활동량 부족이라고도 한다. 즐거운 산책을 위해 반려견의 산책 훈련은 필수입니다.</item>
        <item> ‘반려동물 건강에 대한 우려 항목 TOP3’로 이상적인 체중 유지를 꼽을 만큼, 반려동물의 체중관리에 대한 보호자들의 관심이 커지고 있습니다. 보호자들은 반려동물의 현재 상태를 확인하고, 건강한 체중관리를 할 수 있도록 지속적으로 노력할 필요가 있습니다</item>
        <item>반려동물 보호자들의 자신의 반려동물의 과체중·비만을 인지하지 못하는 경우가 많습니다. 보호자의 50%정도는 자신의 반려동물이 과체중인지 인지하지 못할뿐만 아니라 심지어 귀엽다고 생각하며 행복해한다는 조사 결과도 있습니다. </item>
        <item>반려견 두 마리 중 한 마리가 과체중이나 비만입니다. 반려견의 비만은 일상생활에도 지장을 주지만 심혈관질환, 관절 및 척추질환, 당뇨병, 호흡장애 등 여러 질병의 원인이 되며, 심각한 경우 생명을 위협할 수도 있는 만큼 각별한 관리가 필요합니다.</item>
        <item>반려동물이 먹는 일반식의 급여량을 줄이는 방법보다 산책을 통해 활동량을 늘리는 게 중요합니다.. 일반식의 양을 줄이는 방법은 영양소 불균형으로 이어지거나 조르는 행동을 증가시킬 수 있기 때문입니다.</item>
        <item>반려견의 체중관리를 위해 사료를 줄 때는 계량컵을 사용해 일정량만 공급하는 것이 좋아요. 또, 반려견은 주기적인 운동과 산책을 시켜줘야 하는데요, 하루 최소 20분씩 매일 운동을 규칙적으로 시켜주세요. 지방연소와 근육종강에 도움이 되고 더욱 건강하고 튼튼한 몸이 된답니다</item>
        <item>보호자들은 간식과 음식으로 반려견에 대한 애정을 표현하는데요, 이렇게 되면 영양공급 균형이 깨져 비만을 유발 할 수 있습니다. 간식에 관대해지면 안됩니다. 간식은 늘 주는 것이 아니라 반려견이 올바른 행동을 했을 때 보상으로 주는 것이 좋답니다.</item>
        <item>강아지 비만, 당신의 사랑이 반려견에 미치는 영향! 하루 권장량 보다 많은 음식을 먹이면 비만견이 되기 쉽습니다. 전용사료가 아닌 사람이 먹는 음식은 강아지가 더 높은 열량을 섭취하게되므로 주의가 필요합니다.</item>
        <item>반려견의 비만은 합병증을 발생시킬 가능성을 높여 결과적으로 반려견의 수명을 단축시킵니다. 무기력해지고, 피로도가 증가하고, 활동력이 낮아지고, 수술 시 마취가 필요한 경우 위험성이 증가하고, 무거운 체중을 지탱해야 하기 때문에 관절에도 무리가 갑니다.</item>
        <item>반려동물 비만, 귀엽다고 지나쳐선 안돼요. 과체중, 비만인 반려동물들에겐 공통점이 있습니다. 움직이려고 하지 않는다. 금만 움직여도 숨차 하고 다시 주저앉습니다. 만사가 귀찮아 보이고 잠만 잡니다. 이런 행동들이 귀엽고 사랑스럽게 보일지 모르지만 반려동물에게는 고통 그 자체일 수 있습니다.</item>
    </string-array>
    <!--activity_write.xml-->
    <string name="newEdit">새 게시물</string>
    <string name="checkbox_todo"></string>
</resources>