<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_dangbodydefault" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="비만판별을 위해 댕바디 분석용 사진 촬영 후 갤러리에서\n사진을 선택하고 전송 버튼을 눌러주세요.\n* 댕바디 분석용 사진 : 반려견의 옆모습"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/img"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/img"
        app:layout_constraintTop_toBottomOf="@+id/img" />

    <View
        android:id="@+id/view4"
        android:layout_width="350dp"
        android:layout_height="3px"
        android:layout_marginTop="24dp"
        android:background="#8baa80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <Button
        android:id="@+id/btn_capture"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FFC98F"
        android:text="@string/btn_capture"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        app:strokeWidth="0dp" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FFC98F"
        android:text="@string/btn_gallery"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_capture"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_capture"
        app:layout_constraintTop_toBottomOf="@+id/btn_capture"
        app:strokeWidth="0dp" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="100dp"
        android:layout_height="140dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/btn_send"
        android:textColor="#6BAA80"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_capture"
        app:strokeColor="#6BAA80"
        app:strokeWidth="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>