<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <!-- <EditText
        android:id="@+id/edtPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="294dp"
        android:ems="10"
        android:hint="@string/userPw"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="238dp"
        android:layout_height="60dp"
        android:layout_marginTop="92dp"
        android:gravity="center"
        android:text="Welcome!"
        android:textColor="#ffe0b2"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="로그인을해주세요"
        android:textColor="#ffc98f"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/edtId"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:backgroundTint="#FFE0B2"
        android:ems="10"
        android:hint="@string/userId"
        android:inputType="textPersonName"
        android:textColorHighlight="#FFE0B2"
        android:textColorLink="#FFC98F"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/edtPw"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFE0B2"
        android:ems="10"
        android:hint="@string/userPw"
        android:inputType="textPassword"
        android:textColorHighlight="#FFE0B2"
        android:textColorLink="#FFC98F"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/edtId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtId"
        app:layout_constraintTop_toBottomOf="@+id/edtId" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="98dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#6BAA80"
        android:text="자동로그인"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/edtPw"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtPw"
        app:layout_constraintTop_toBottomOf="@+id/edtPw" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/btnLogin"
        android:textColor="#FF6041"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="@+id/checkBox"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:strokeColor="#FF6041"
        app:strokeWidth="3dp" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="아직 회원이 아니신가요?\n다양한 댕바디 서비스 이용을 위해서 회원가입을 해주세요!"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnJoin"
        app:layout_constraintStart_toEndOf="@+id/btnJoin"
        app:layout_constraintTop_toTopOf="@+id/btnJoin"
        app:layout_constraintVertical_bias="0.409" />

    <Button
        android:id="@+id/btnJoin"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/btnJoin"
        android:textColor="#FF6041"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="#FF6041"
        app:strokeWidth="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>