<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <!--    <Button-->
    <!--        android:id="@+id/btnWeekly"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:background="@null"-->
    <!--        android:text="@string/btnWeekly"-->
    <!--        android:textColor="@color/blue"-->
    <!--        android:textSize="20sp"-->
    <!--        android:textStyle="bold" />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="일정관리"
            android:textColor="#232323"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view10"
            android:layout_width="400dp"
            android:layout_height="2px"
            android:background="#D3D3D3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPrevMonth"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:text="@string/btnPrevMonth"
            android:textColor="#FFC98F"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="30dp" />

        <TextView
            android:id="@+id/monthYearTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="Feb 2021"
            android:textAlignment="center"
            android:textColor="#FF6041"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnNextMonth"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:text="@string/btnNextMonth"
            android:textColor="#FFC98F"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="SUN"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="MON"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TUE"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="WED"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="THUR"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="FRI"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="SAT"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp" />


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="261dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="6dp" />

    <Button
        android:id="@+id/btnWeekly"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@null"
        android:backgroundTint="#FFFFFF"
        android:text="@string/btnWeekly"
        android:textColor="#ff6041"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:strokeColor="#ff6041"
        app:strokeWidth="3dp" />

</LinearLayout>















